--- a/.config/emacs/init.org
+++ b/.config/emacs/init.org
@@ -26,6 +26,13 @@ Exec path used by emacs needs to be configured to load path from shell
 #+begin_src emacs-lisp :tangle lisp/miscellaneous.el
   (setq auth-sources '("~/.authinfo"))
 #+end_src
+** Allow ansi-colors in log files
+#+begin_src emacs-lisp :tangle lisp/miscellaneous.el
+  (add-hook 'find-file-hook
+    (lambda ()
+      (when (string-match "\\.log\\'" (buffer-file-name))
+        (ansi-color-apply-on-region (point-min) (point-max)))))
+#+end_src
 * Evil Mode
 #+begin_src emacs-lisp :tangle lisp/evil.el
   (straight-use-package 'evil)
@@ -457,6 +464,7 @@ Candidate documentation annotation
 #+begin_src emacs-lisp :tangle lisp/calendar.el
   (straight-use-package 'org-timeblock)
   (require 'org-timeblock)
+  (setq org-timeblock-span 1)
 #+end_src
 * Help utilities 
 #+begin_src emacs-lisp :tangle lisp/help-utilities.el
@@ -502,6 +510,12 @@ Candidate documentation annotation
   (straight-use-package
    '(git-share :type git :host github :repo "mgmarlow/git-share"))
   (require 'git-share)
+#+end_src
+** Forge - Create pull requests and interact with versioning services
+#+begin_src emacs-lisp :tangle lisp/versionning.el
+  (straight-use-package 'forge)
+  (with-eval-after-load 'magit
+    (require 'forge))
 #+end_src
 ** [[https://github.com/blahgeek/emacs-pr-review][PR Review]]
 #+begin_src emacs-lisp :tangle lisp/versionning.el
@@ -828,25 +842,25 @@ Multi Vterm management
 #+end_src
 ** Start ai-agent configuration/feedback 
 #+begin_src emacs-lisp :tangle lisp/custom-commands.el
-    (defvar ai-agent-run-dev-process nil "Process handle for the ai agent app.")
+  (defvar ai-agent-run-dev-process nil "Process handle for the ai agent app.")
 
-    (defun start-ai-agent-run-dev ()
-      "Start the ai-agent (npm run dev) and track logs."
-      (interactive)
-      (setq ai-agent-run-dev-process
-            (start-process-shell-command
-             "ai-agent-run-dev" ;; Name of the process
-             nil                        ;; No associated buffer
-             "cd ~/gorgias/ai-agent && npm run dev > /tmp/ai-agent-run-dev.log 2>&1"))
-      (message "ai-agent-run-dev app is starting... Logs available -> /tmp/ai-agent-run-dev.log"))
+  (defun start-ai-agent-run-dev ()
+    "Start the ai-agent (npm run dev) and track logs."
+    (interactive)
+    (setq ai-agent-run-dev-process
+          (start-process-shell-command
+           "ai-agent-run-dev" ;; Name of the process
+           nil                        ;; No associated buffer
+           "cd ~/gorgias/ai-agent && npm run dev > /tmp/ai-agent-run-dev.log 2>&1"))
+    (message "ai-agent-run-dev app is starting... Logs available -> /tmp/ai-agent-run-dev.log"))
 
-    (defun stop-ai-agent-run-dev ()
-      "Stop the ai-agent-run dev."
-      (interactive)
-      (when (process-live-p ai-agent-run-dev-process)
-        (kill-process ai-agent-run-dev-process)
-        (setq ai-agent-run-dev-process nil)
-        (message "ai-agent-run-dev is stopping... Logs available -> /tmp/ai-agent-run-dev.log")))
+  (defun stop-ai-agent-run-dev ()
+    "Stop the ai-agent-run dev."
+    (interactive)
+    (when (process-live-p ai-agent-run-dev-process)
+      (kill-process ai-agent-run-dev-process)
+      (setq ai-agent-run-dev-process nil)
+      (message "ai-agent-run-dev is stopping... Logs available -> /tmp/ai-agent-run-dev.log")))
 #+end_src
 ** Global start/stop gorgias
 #+begin_src emacs-lisp :tangle lisp/custom-commands.el
