--- a/.config/emacs/init.org
+++ b/.config/emacs/init.org
@@ -541,24 +541,15 @@ Candidate documentation annotation
   (add-hook 'terraform-mode-hook #'outline-minor-mode)
 #+end_src
 
-** LSP Server - EGLOT
+** LSP Client
 #+begin_src emacs-lisp :tangle lisp/coding.el
   (add-hook 'typescript-ts-mode-hook 'eglot-ensure)
   (setq eglot-confirm-server-initiated-edits nil)
   (global-set-key (kbd "M-s f") #'eglot-code-action-quickfix)
 #+end_src
-** Code completion
+** Python mode
 #+begin_src emacs-lisp :tangle lisp/coding.el
-  (straight-use-package 'corfu)
-  (global-corfu-mode)
-  (setq corfu-auto t)
-#+end_src
-Kind icons
-#+begin_src emacs-lisp :tangle lisp/coding.el
-  (straight-use-package 'kind-icon)
-  (with-eval-after-load 'corfu
-    (require 'kind-icon)
-    (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter))
+  (add-to-list 'eglot-server-programs '(python-mode . ("pyright-langserver" "--stdio")))
 #+end_src
 ** Typescript mode
 Enable typescript-ts-mode on ts(x) files
@@ -578,6 +569,19 @@ Global typescript usefull variables
 #+begin_src emacs-lisp :tangle lisp/coding.el
   (setq typescript-ts-mode-indent-offset 4)
   (add-hook 'typescript-ts-mode-hook 'electric-pair-mode)
+#+end_src
+** Code completion
+#+begin_src emacs-lisp :tangle lisp/coding.el
+  (straight-use-package 'corfu)
+  (global-corfu-mode)
+  (setq corfu-auto t)
+#+end_src
+Kind icons
+#+begin_src emacs-lisp :tangle lisp/coding.el
+  (straight-use-package 'kind-icon)
+  (with-eval-after-load 'corfu
+    (require 'kind-icon)
+    (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter))
 #+end_src
 ** Terraform mode
 #+begin_src emacs-lisp :tangle lisp/coding.el
