--- a/.config/emacs/init.org
+++ b/.config/emacs/init.org
@@ -612,7 +612,7 @@ Candidate documentation annotation
 * Coding
 ** Code folding
 #+begin_src emacs-lisp :tangle lisp/coding.el
-  (add-hook 'terraform-mode-hook #'outline-minor-mode)
+  (hs-minor-mode t)
 #+end_src
 
 ** LSP Client
@@ -703,7 +703,72 @@ Multi Vterm management
   (straight-use-package 'multi-vterm)
   (require 'multi-vterm)
   #+end_src
+* Email
+** Require packages
+#+begin_src emacs-lisp :tangle lisp/email.el
+  (straight-use-package 'mu4e)
+  (require 'mu4e)
+  (require 'smtpmail)
+#+end_src
+** Mu4e general settings
+#+begin_src emacs-lisp :tangle lisp/email.el
+  ;; we installed this with homebrew
+  (setq mu4e-mu-binary (executable-find "mu"))
+  (setq mu4e-maildir "~/.mail")
+  (setq mu4e-get-mail-command (concat (executable-find "mbsync") " -a"))
+  (setq mu4e-update-interval 300)
+  (setq mu4e-attachment-dir "~/Downloads")
+  (setq mu4e-change-filenames-when-moving t)
+  (setq mu4e-user-mail-address-list '(
+                                      "aria.groult@gorgias.com"))
+#+end_src
+** Mu4e shortcuts
+#+begin_src emacs-lisp :tangle lisp/email.el
+  (setq  mu4e-maildir-shortcuts
+          '(("/Gorgias/Inbox" . ?g)
+            ))
+#+end_src
+** Mu4e contexts
+#+begin_src emacs-lisp :tangle lisp/email.el
+  (setq mu4e-contexts
+     `( ,(make-mu4e-context
+           :name "Gorgias"
+           :enter-func (lambda () (mu4e-message "Entering Gorgias context"))
+           :leave-func (lambda () (mu4e-message "Leaving Gorgias context"))
+           ;; we match based on the contact-fields of the message
+           :match-func (lambda (msg)
+                         (when msg
+                           (mu4e-message-contact-field-matches msg
+                             :to "aria.groult@gorgias.com")))
+           :vars '( ( user-mail-address	    . "aria.groult@gorgias.com"  )
+                    ( user-full-name	    . "Aria Groult" )
+                    ( message-user-organization . "Gorgias" )
+                    ( message-signature .
+                      (concat
+                        "Aria Groult\n"
+                        "Software engineer\n"
+                        "AI Agent - Automate - Gorgias\n"))
+                    ( mu4e-sent-folder   "/Gorgias/Sent"
+                      mu4e-drafts-folder "/Gorgias/Drafts"
+                      mu4e-trash-folder  "/Gorgias/Trash"
+                      mu4e-refile-folder "/Gorgias/Archive"
+                      mu4e-sent-messages-behavior 'delete
+                      smtpmail-smtp-server "smtp-relay.gmail.com")))))
 
+  ;; set `mu4e-context-policy` and `mu4e-compose-policy` to tweak when mu4e should
+  ;; guess or ask the correct context, e.g.
+  ;; start with the first (default) context;
+  ;; default is to ask-if-none (ask when there's no context yet, and none match)
+  (setq mu4e-context-policy 'ask-if-none)
+  ;; compose with the current context is no context matches;
+  ;; default is to ask
+  (setq mu4e-compose-context-policy 'ask)
+#+end_src
+** Sending mails
+#+begin_src emacs-lisp :tangle lisp/email.el
+  ;; tell message-mode how to send mail
+  (setq message-send-mail-function 'smtpmail-send-it)
+#+end_src
 * Package Manager - Straight.el 
 #+begin_src emacs-lisp :tangle lisp/straight.el
   (setq package-enable-at-startup nil)
