enable hs-minor-mode everywhere

--- a/.config/emacs/init.org
+++ b/.config/emacs/init.org
@@ -612,7 +612,7 @@ Candidate documentation annotation
 * Coding
 ** Code folding
 #+begin_src emacs-lisp :tangle lisp/coding.el
-  (hs-minor-mode t)
+  (add-hook 'prog-mode-hook #'hs-minor-mode)
 #+end_src
 
 ** LSP Client
